--- a/public/LESS/sidebar.less
+++ b/public/LESS/sidebar.less
@@ -19,6 +19,9 @@
 		display: block;
 	}
 }
+.sidebar-border {
+
+}
 .sidebar-panel .feed-element img.img-circle {
 	width: 32px;
 	height: 32px;
@@ -81,15 +84,13 @@
 	padding: 0px 0 0px 0;
 	margin: 0px 0px 0 0;
 	right: 0;
-	position:fixed;
-	background: #fff;
+	position: absolute;
 	overflow: visible;
 	border: 1px solid @lightest-grey;
 	border-radius: 5px;
-
 }
 #right-sidebar-filter ul li a {
-	color: @text-color;
+	color: inherit;
 }
 #right-sidebar-filter ul li a:hover, #right-sidebar-filter ul li a:active, #right-sidebar-filter ul li a:focus {
 	//color: @cherry;
